// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`coinapi assets endpoint when sending well-formed request should reply with success 1`] = `
{
  "data": {
    "result": 3043.673871176232,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 3043.673871176232,
  "statusCode": 200,
}
`;

exports[`coinapi crypto endpoint when sending well-formed request should reply with success 1`] = `
{
  "data": {
    "result": 22978.232093447674,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 22978.232093447674,
  "statusCode": 200,
}
`;
